<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FickaPetsStart!</string>
    <string name="app_name">FickaPets</string>
	<string name="strength">strength</string>
	<string name="health">health</string>
	<string name="hunger">hunger</string>
	<string name="tiredness">tiredness</string>
	<string name="feed">feed</string>
	<string name="sleep">Put to Sleep</string>
	<string name="awake">Wake Up</string>
	<string name="reset">Reset</string>
	<string name="game">Play Game</string>
	<string name="catchCoins">Coin Catch</string>
	<string name="ticTacToe">Tic-tac-toe</string>
	<string name="newTTTGame">New Game</string>
	<string name="choosePetTitle">Choose a Pet!</string>
	<string name="choosePetDescription">Select a pet! Choose carefully, this cannot be undone!</string>
	<string name="selectPetButton">Select</string>
	
	<!--  Complaint messages for notifications -->
	<string name="petNeedsFood">Your pet needs food</string>
	<string name="petStarving">Your pet is starving</string>
	<string name="petTired">Your pet is tired</string>
	<string name="petVeryTired">Your pet is sleep deprived</string>

	<string name="itemShopLabel">FickaPets item shop</string>
	<string name="shop">Shop</string>
	<string name="battle">Battle</string>
	<string name="battleLabel">Battle</string>
	<string name="findFriends">Find Friends to Battle</string>
	<string name="loadingGame">Loading Battle</string>
	<string name="myPet">My Pet</string>
	<string name="oppPet">Opponent Pet</string>
	<string name="attackButton">Click To Attack</string>
	<string name="newBattle">Press to Start New Battle</string>
	<string name="gameStatus">Game Status</string>
	<string name="userPhoto">Opponent</string>
	<string name="currentBattles">Current Battles</string>
	<string name="titleSeparator">Line Separating Title</string>
	<string name="newBattleButtonText">+ New Battle</string>
	<string name="period">.</string>
	<string name="findFriend">Choose a friend to battle</string>
	
	<!-- main menu buttons -->
	<string name="sleepButton">Put pet to sleep</string>
	<string name="feedButton">Feed your pet</string>
	<string name="battleButton">Battle your friend\'s pets</string>
	<string name="shopButton">Buy items for your pet</string>
	<string name="gameButton">Play a mini-game</string>
</resources>